# mily

./: .codeiumignore  .gitignore  README.md  page.tsx
backend/: API_SCHEMA.md  DATABASE_SCHEMA.md  HTTPONLY_COOKIES.md  README.md  pyproject.toml  pytest.ini  railway.json  requirements.txt  setup_neon.py
backend/config/: settings.py  urls.py
backend/mily/: _views_stashed.py  admin.py  apps.py  auth_views.py  authentication.py  aws_s3.py  helper_views.py  models.py  serializers.py  signals.py  tests.py  throttling.py  urls.py  views.py
backend/mily/migrations/: 0001_initial.py  0002_event_tags.py  0002_rename_tables.py  0003_remove_user_clerk_user_id_alter_user_is_active_and_more.py  0004_user_handle.py  0005_alter_user_handle.py  0006_alter_user_birth_date.py  0007_event_is_editable_event_type.py  0008_remove_event_location_remove_user_location.py  0009_event_location.py  0010_remove_event_is_date_approximate.py  0011_remove_user_birth_date.py  0012_remove_event_is_editable_remove_event_type.py  0013_user_email_verification_sent_at_and_more.py  0014_user_last_active_at.py  0015_rename_last_active_at_user_last_active.py  0016_user_deactivated_at.py  0017_event_is_day_approximate.py  0018_user_is_public.py  0019_share_delete_friendship_and_more.py  0020_share_is_accepted.py  0021_share_accepted_at.py  0022_event_is_month_approximate.py  0023_remove_event_photos_eventphoto.py  0024_remove_eventphoto_caption.py  0025_notification.py  0026_remove_user_profile_picture_user_avatar_updated_at.py  0027_eventmention.py  0029_remove_eventmention_uniq_event_mention_and_more.py  (+3 more)
(+156 files in other folders)
